# vst3-host-demo

./: Cargo.toml  README.md  a.out  file.c
.cargo/: config.toml
src/: application.rs  component.rs  editor.rs  error.rs  factory.rs  host.rs  lib.rs  main.rs  module.rs  module_info.rs  plugin.rs  prelude.rs  process.rs  processor.rs  run_loop.rs  scanner.rs  traits.rs  unit.rs  util.rs  view.rs
src/host/: run_loop.rs
src/module/: info.rs  linux.rs  macos.rs
src/traits/: component_handler.rs  plug_frame.rs
tests/: moduleinfo.json
