[package]
name = "vst3-host"
version = "0.1.0"
edition = "2021"

[dependencies]
baseview = { git = "https://github.com/RustAudio/baseview.git" }
bitflags = "2.5.0"
either = "1.12.0"
encoding_rs = "0.8.34"
json5 = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3" }
tracing = "0.1.40"
vst3 = "0.1"
keyboard-types = "0.6"
raw-window-handle = "0.5"
x11 = "2.21.0"
winit = "0.30.0"
